--- a/refs.bib
+++ b/refs.bib
@@ -93,3 +93,43 @@ url={https://doi.org/10.1038/ncomms5308}
   number={},
   pages={1-4},
   doi={10.1109/ICSPIS48872.2019.9066113}}
+
+
+@book{genetic,
+  title={Genetic Algorithms and Engineering Optimization},
+  author={Gen, M. and Cheng, R.},
+  isbn={9780471315315},
+  lccn={99016023},
+  series={Engineering Design and Automation},
+  url={https://books.google.ca/books?id=U7MuV1q6P1oC},
+  year={1999},
+  pages={34},
+  publisher={Wiley}
+}
+
+@INPROCEEDINGS{gm,
+  author={Higashi, N. and Iba, H.},
+  booktitle={Proceedings of the 2003 IEEE Swarm Intelligence Symposium. SIS'03 (Cat. No.03EX706)}, 
+  title={Particle swarm optimization with Gaussian mutation}, 
+  year={2003},
+  volume={},
+  number={},
+  pages={72-79},
+  doi={10.1109/SIS.2003.1202250}}
+
+@article{dropout,
+author = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+title = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+year = {2014},
+issue_date = {January 2014},
+publisher = {JMLR.org},
+volume = {15},
+number = {1},
+issn = {1532-4435},
+abstract = {Deep neural nets with a large number of parameters are very powerful machine learning systems. However, overfitting is a serious problem in such networks. Large networks are also slow to use, making it difficult to deal with overfitting by combining the predictions of many different large neural nets at test time. Dropout is a technique for addressing this problem. The key idea is to randomly drop units (along with their connections) from the neural network during training. This prevents units from co-adapting too much. During training, dropout samples from an exponential number of different "thinned" networks. At test time, it is easy to approximate the effect of averaging the predictions of all these thinned networks by simply using a single unthinned network that has smaller weights. This significantly reduces overfitting and gives major improvements over other regularization methods. We show that dropout improves the performance of neural networks on supervised learning tasks in vision, speech recognition, document classification and computational biology, obtaining state-of-the-art results on many benchmark data sets.},
+journal = {J. Mach. Learn. Res.},
+month = {jan},
+pages = {1929–1958},
+numpages = {30},
+keywords = {deep learning, neural networks, model combination, regularization}
+}
