--- a/finalproject.tex
+++ b/finalproject.tex
@@ -9,7 +9,7 @@
 
 
 \title{Final Project: Exploring Batch Normalization}
-\author{Zony Yu}
+\author{Zony Yu\\ zonglin1@ualberta.ca}
 \date{Dec 1, 2021}
 
 \usepackage{mathbbol}
